Updated library to version 2.0.

--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
             "RawPHP\\Doctrine\\": "src/RawPHP/Doctrine/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
+        }
+    }
 }
