--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "laravel/framework": "5.0.*@dev",
         "atrauzzi/laravel-doctrine": "dev-master",
         "doctrine/orm": "2.4.*@dev",
         "doctrine/dbal": "2.4.*@dev",
